[gd_scene load_steps=3 format=2]

[ext_resource path="res://common/collisions/weapon_hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/weapons/swords/sword.gd" type="Script" id=2]

[node name="Sword" type="Node2D"]
script = ExtResource( 2 )

[node name="WeaponContainer" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="WeaponContainer"]

[node name="Hand" type="Sprite" parent="WeaponContainer"]

[node name="WeaponHitbox" parent="WeaponContainer" instance=ExtResource( 1 )]
collision_layer = 2
collision_mask = 20

[node name="EffectSprite" type="Sprite" parent="."]

[node name="WeaponAnimation" type="AnimationPlayer" parent="."]

[node name="EffectAnimation" type="AnimationPlayer" parent="."]

[node name="SoundEffect" type="AudioStreamPlayer2D" parent="."]

[node name="LightCooldown" type="Timer" parent="."]
one_shot = true

[node name="HeavyCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="WeaponContainer/WeaponHitbox" to="." method="_on_WeaponHitbox_area_entered"]

[editable path="WeaponContainer/WeaponHitbox"]
